k8s/namespace-service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-tcc

---
apiVersion: v1
kind: Service
metadata:
  name: tcc-api
  namespace: app-tcc
  labels:
    app: tcc-api
spec:
  selector:
    app: tcc-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
